<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.mainactivity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="Search"
        android:orderInCategory="200"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        />
</menu>